# katengine_

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/src/kat/: cfg.hpp
engine/src/kat/window/: utils.cpp  utils.hpp  window.cpp  window.hpp
engine/src/kat/window/win32/: platform_win32.cpp  platform_win32.hpp
engine/src/kat/window/x11/: platform_x11.cpp  platform_x11.hpp
game/: CMakeLists.txt
game/src/game/: game.cpp
libs/: CMakeLists.txt
samples/: sample1.cpp  sample2.cpp
